--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,24 +4,7 @@ h1 {
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
-}
-
-label {
-    width:  100px;
     margin: auto;
-}
-
-.input-item{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 10px;
+    width: fit-content;
 }
