--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -11,23 +11,126 @@
 </head>
 
 <body>
-    <h1>Log In</h1>
-    <div class="center">
-        <form action="main" id='form'>
-            <div class="input-item">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username">
+    <div class="center w-max">
+        <h1>Math Racer</h1>
+
+        <!-- Pills navs -->
+        <ul class="nav nav-pills nav-justified mb-3" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link <% if(login) { %> active <% }%>" id="tab-login" data-mdb-pill-init
+                    href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="true">Login</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link <% if(!login) { %> active <% }%>" id="tab-register" data-mdb-pill-init
+                    href="#pills-register" role="tab" aria-controls="pills-register" aria-selected="false">Register</a>
+            </li>
+        </ul>
+
+
+        <!-- Pills content -->
+        <div class="tab-content">
+            <div class="tab-pane fade  <% if(login) { %>  show active <% }%>" id="pills-login" role="tabpanel"
+                aria-labelledby="tab-login" style="width: 300px;">
+                <% if(loginFailed) {%>
+                    <p class="text-warning">Login failed. Please try again.</p>
+                    <% } %>
+                        <form action="login" , method="post" , id="form">
+                            <!-- Username input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="text" id="username" class="form-control" name="username" />
+                                <label class="form-label" for="username">Username</label>
+                            </div>
+
+                            <!-- Password input -->
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="password" id="password" class="form-control" name="password" />
+                                <label class="form-label" for="password">Password</label>
+                            </div>
+
+                            <!-- 2 column grid layout -->
+                            <div class="row mb-4">
+                                <div class="col-md-6 d-flex justify-content-center">
+                                    <!-- Checkbox -->
+                                    <!-- <div class="form-check mb-3 mb-md-0">
+                                        <input class="form-check-input" type="checkbox" value="rememberMe"
+                                            id="loginCheck" <%if(rememberMe) {%>checked <%}%>name="rememberMe" />
+                                            <label class="form-check-label" for="loginCheck"> Remember me </label>
+                                    </div> -->
+                                </div>
+
+                                <!-- <div class="col-md-6 d-flex justify-content-center"> -->
+                                <!-- Simple link -->
+                                <!-- <a href="#!">Forgot password?</a> -->
+                                <!-- </div> -->
+                            </div>
+
+                            <!-- Submit button -->
+                            <div class="row justify-content-center">
+                                <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                                    class="btn btn-primary btn-block mb-4">Sign in</button>
+                            </div>
+
+                        </form>
             </div>
-            <br>
-            <div class="input-item">
-                <label for="password">Password</label>
-                <input type="text" name="password" id="password">
+            <div class="tab-pane fade <% if(!login) { %> show active <% }%>" id="pills-register" role="tabpanel"
+                aria-labelledby="tab-register" style="width: 300px;">
+                <form action="register" method="post">
+                    <!-- Username input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="text" id="registerUsername" class="form-control" name="registerUsername" />
+                        <label class="form-label" for="registerUsername">Username</label>
+                        <% if(usernameTaken) {%>
+                            <p class="text-warning">This username is taken.</p>
+                            <%}%>
+                    </div>
+
+
+                    <!-- Email input -->
+                    <!-- <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="email" id="registerEmail" class="form-control" />
+                        <label class="form-label" for="registerEmail">Email</label>
+                    </div> -->
+
+                    <!-- Password input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="password" id="registerPassword" class="form-control" name="registerPassword" />
+                        <label class="form-label" for="registerPassword">Password</label>
+                    </div>
+
+                    <!-- Repeat Password input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="password" id="registerRepeatPassword" class="form-control"
+                            name="registerRepeatPassword" />
+                        <label class="form-label" for="registerRepeatPassword">Repeat password</label>
+                    </div>
+
+                    <% if(pwNoMatch) {%>
+                        <p class="text-warning">Passwords do not match. Please try again.</p>
+                        <% } %>
+
+
+                            <!-- Submit button -->
+                            <div class="row justify-content-center">
+                                <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                                    class="btn btn-primary btn-block mb-3 ">Register Account</button>
+                            </div>
+                </form>
             </div>
-            <br>
-            <button>Go</button>
-        </form>
+        </div>
 
     </div>
+    <script>
+        const triggerTabList = Array.from(document.querySelectorAll('#myTab a'))
+
+        triggerTabList.forEach((triggerEl) => {
+            const tabTrigger = new bootstrap.Tab(triggerEl)
+
+            triggerEl.addEventListener('click', function (event) {
+                event.preventDefault()
+                tabTrigger.show()
+            })
+        })
+    </script>
 </body>
 
 </html>
