--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,3 +8,14 @@ h1 {
     margin-top: 10px;
     width: fit-content;
 }
+
+@font-face {
+    font-family: 'Anta';
+    src: url('/fonts/Anta-Regular.ttf') format('truetype');
+}
+
+* {
+    font-family: "Anta", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
