--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,3 +6,21 @@ h2 {
     width: 100%;
     text-align: center;
 }
+
+
+.center {
+    margin: auto;
+    margin-top: 10px;
+    width: fit-content;
+}
+
+@font-face {
+    font-family: 'Anta';
+    src: url('/fonts/Anta-Regular.ttf') format('truetype');
+}
+
+* {
+    font-family: "Anta", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
