--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,46 +31,28 @@
         <div class="tab-content">
             <div class="tab-pane fade  <% if(login) { %>  show active <% }%>" id="pills-login" role="tabpanel"
                 aria-labelledby="tab-login" style="width: 300px;">
-                <% if(loginFailed) {%>
-                    <p class="text-warning">Login failed. Please try again.</p>
-                    <% } %>
-                        <form action="login" , method="post" , id="form">
-                            <!-- Username input -->
-                            <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="username" class="form-control" name="username" />
-                                <label class="form-label" for="username">Username</label>
-                            </div>
+                <p class="text-warning" id="loginFailed" <% if(!loginFailed) { %>style="display: none;"<%}%>>Login
+                        failed. Please try again.</p>
+                <form action="login" , method="post" , id="form">
+                    <!-- Username input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="text" id="username" class="form-control" name="username" />
+                        <label class="form-label" for="username">Username</label>
+                    </div>
 
-                            <!-- Password input -->
-                            <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="password" id="password" class="form-control" name="password" />
-                                <label class="form-label" for="password">Password</label>
-                            </div>
+                    <!-- Password input -->
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="password" id="password" class="form-control" name="password" />
+                        <label class="form-label" for="password">Password</label>
+                    </div>
 
-                            <!-- 2 column grid layout -->
-                            <div class="row mb-4">
-                                <div class="col-md-6 d-flex justify-content-center">
-                                    <!-- Checkbox -->
-                                    <!-- <div class="form-check mb-3 mb-md-0">
-                                        <input class="form-check-input" type="checkbox" value="rememberMe"
-                                            id="loginCheck" <%if(rememberMe) {%>checked <%}%>name="rememberMe" />
-                                            <label class="form-check-label" for="loginCheck"> Remember me </label>
-                                    </div> -->
-                                </div>
+                    <!-- Submit button -->
+                    <div class="row justify-content-center">
+                        <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                            class="btn btn-primary btn-block mb-4">Sign in</button>
+                    </div>
 
-                                <!-- <div class="col-md-6 d-flex justify-content-center"> -->
-                                <!-- Simple link -->
-                                <!-- <a href="#!">Forgot password?</a> -->
-                                <!-- </div> -->
-                            </div>
-
-                            <!-- Submit button -->
-                            <div class="row justify-content-center">
-                                <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                                    class="btn btn-primary btn-block mb-4">Sign in</button>
-                            </div>
-
-                        </form>
+                </form>
             </div>
             <div class="tab-pane fade <% if(!login) { %> show active <% }%>" id="pills-register" role="tabpanel"
                 aria-labelledby="tab-register" style="width: 300px;">
@@ -79,9 +61,8 @@
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="text" id="registerUsername" class="form-control" name="registerUsername" />
                         <label class="form-label" for="registerUsername">Username</label>
-                        <% if(usernameTaken) {%>
-                            <p class="text-warning">This username is taken.</p>
-                            <%}%>
+                        <p class="text-warning" id="usernameTaken" <% if(!usernameTaken) { %>style="display: none;"<%}%>
+                                >This username is taken.</p>
                     </div>
 
 
@@ -107,8 +88,6 @@
                     <% if(pwNoMatch) {%>
                         <p class="text-warning">Passwords do not match. Please try again.</p>
                         <% } %>
-
-
                             <!-- Submit button -->
                             <div class="row justify-content-center">
                                 <button type="submit" data-mdb-button-init data-mdb-ripple-init
@@ -121,13 +100,16 @@
     </div>
     <script>
         const triggerTabList = Array.from(document.querySelectorAll('#myTab a'))
-
+        const usernameTaken = document.getElementById('usernameTaken');
+        const loginFailed = document.getElementById('loginFailed');
         triggerTabList.forEach((triggerEl) => {
             const tabTrigger = new bootstrap.Tab(triggerEl)
 
             triggerEl.addEventListener('click', function (event) {
                 event.preventDefault()
                 tabTrigger.show()
+                usernameTaken.style.display = 'none';
+                loginFailed.style.display = 'none';
             })
         })
     </script>
