--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,13 +12,12 @@
 
 <body>
     <h1>Math Racer</h1>
-    <h2>Welcome, <%= username %></h2>
-    <ul id='liveUsers'>
-        <% for (let liveUser of users) { %>
-        <li><%= liveUser %></li>
-        <% } %>
+    <h2>Welcome, <%= username %>
+    </h2>
+    <div class="center">
+        <form action="join match"><button type="button" class="btn btn-primary">Join Match</button></form>
 
-    </ul>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
@@ -26,7 +25,7 @@
         socket.on('update live users', (users) => {
             const liveUsers = document.getElementById('liveUsers');
             liveUsers.innerHTML = "";
-            for(let user of users) {
+            for (let user of users) {
                 const newLi = document.createElement('LI');
                 newLi.innerText = user;
                 liveUsers.appendChild(newLi);
@@ -34,4 +33,5 @@
         });
     </script>
 </body>
+
 </html>
