Add ratings to user schema

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
         </div>
         <div id="stats" class=" w-25 mx-auto" style="margin-top: 30px;">
             <h3>Your Stats</h3>
-            <p>Rating: 1000</p>
+            <p>Rating: <%= rating %></p>
             <!-- <p>Win Rate: 0/0 (0%)</p> -->
             <!-- <p>Record: 120</p> -->
         </div>
