--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,23 +1,3 @@
-h1 {
-    width: 100%;
-    text-align: center
-}
-h2 {
-    width: 100%;
-    text-align: center;
-}
-
-
-.center {
-    margin: auto;
-    margin-top: 10px;
-    width: fit-content;
-}
-
-#time {
-    font-size: larger;
-}
-
 @font-face {
     font-family: 'Anta';
     src: url('/fonts/Anta-Regular.ttf') format('truetype');
@@ -27,6 +7,49 @@ h2 {
     font-family: "Anta", Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+h1 {
+    width: 100%;
+    text-align: center
+}
+
+h2 {
+    width: 100%;
+    text-align: center;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.center {
+    margin: auto;
+    margin-top: 10px;
+    width: 100%;
+}
+
+#time {
+    font-size: larger;
+    text-align: center;
+}
+
+#gamePanel {
+    background-color:rgb(40,40,40);
+    flex: 1;
+    width: 75%;
+    margin: auto;
+    padding: 20px;
+}
+
+.playerPanel {  
+    text-align: center;
 }
 
 p {
