--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -18,21 +18,22 @@
             <h2 id="gameTitle">a vs. b</h2>
             <p id="time">120</p>
         </div>
-    </div>
-    <div id="gamePanel" class="row border boder-1 border-light">
-        <div class="playerPanel col border-end border-1 border-light">
-            <p>Player A</p>
-            <p>Points: 35</p>
-            <h2>4 + 2</h2>
+        <div id="gamePanel" class="row border boder-1 border-light">
+            <div class="playerPanel col border-end border-1 border-light">
+                <p>Player A</p>
+                <p>Points: 35</p>
+                <h2>4 + 2</h2>
+                <input type="text">
+            </div>
+
+            <div class="playerPanel col border-start border-1 border-light">
+                <p>Player B</p>
+                <p>Points: 28</p>
+                <h2>3 + 7<h2>
+            </div>
         </div>
 
-        <div class="playerPanel col border-start border-1 border-light">
-            <p>Player B</p>
-            <p>Points: 28</p>
-            <h2>3 + 7<h2>
-        </div>
     </div>
-
 
 </body>
 
