--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,9 +30,10 @@ body {
 }
 
 .center {
-    margin: auto;
-    margin-top: 10px;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 #time {
