--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -23,7 +23,7 @@
                 <p>Player A</p>
                 <p>Points: 35</p>
                 <h2>4 + 2</h2>
-                <input type="text">
+                <input id="inputText" type="text">
             </div>
 
             <div class="playerPanel col border-start border-1 border-light">
